force-app/main/default/objects/LoadingLocation__c/LoadingLocation__c.object-meta.xml
<CustomObject>
    <description>Location where truck will load or unload cargo</description>
    <label>荷積み・荷下ろし</label>
    <nameField>
        <displayFormat>LL-{000000}</displayFormat>
        <label>LOADING LOCATION NUMBER</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>