force-app/main/default/objects/LoadingLocation__c/fields/ActualArrivalTime__c.field-meta.xml
<CustomField>
    <fullName>ActualArrivalTime__c</fullName>
    <label>ACTUAL ARRIVAL TIME</label>
    <type>DateTime</type>
</CustomField>