force-app/main/default/objects/LoadingLocation__c/fields/ArrivalTime__c.field-meta.xml
<CustomField>
    <fullName>ArrivalTime__c</fullName>
    <label>ESTIMATED ARRIVAL TIME</label>
    <type>DateTime</type>
</CustomField>