force-app/main/default/objects/LoadingLocation__c/fields/CargoMeasurement__c.field-meta.xml
<CustomField>
    <fullName>CargoMeasurement__c</fullName>
    <label>CARGO MEASUREMENT(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>