force-app/main/default/objects/LoadingLocation__c/fields/CargoMeasurementAfter__c.field-meta.xml
<CustomField>
    <fullName>CargoMeasurementAfter__c</fullName>
    <label>CARGO MEASUREMENT(CBM)-AFTER</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>