force-app/main/default/objects/LoadingLocation__c/fields/CargoMeasurementBefore__c.field-meta.xml
<CustomField>
    <fullName>CargoMeasurementBefore__c</fullName>
    <label>CARGO MEASUREMENT(CBM)-BEFORE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>