force-app/main/default/objects/LoadingLocation__c/fields/CargoWeight__c.field-meta.xml
<CustomField>
    <fullName>CargoWeight__c</fullName>
    <label>CARGO WEIGHT(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>