force-app/main/default/objects/LoadingLocation__c/fields/CargoWeightAfter__c.field-meta.xml
<CustomField>
    <fullName>CargoWeightAfter__c</fullName>
    <label>CARGO WEIGHT(KG)-AFTER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>