force-app/main/default/objects/LoadingLocation__c/fields/CargoWeightBefore__c.field-meta.xml
<CustomField>
    <fullName>CargoWeightBefore__c</fullName>
    <label>CARGO WEIGHT(KG)-BEFORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>