force-app/main/default/objects/LoadingLocation__c/fields/ContainerDetail__c.field-meta.xml
<CustomField>
    <fullName>ContainerDetail__c</fullName>
    <formula>&quot;CONTAINER ID:&quot;&amp;  Delivery__r.CONTAINER_ID__r.Name &amp;BR() &amp; 
&quot;MEASUREMENT(CBM):&quot;&amp;text(Delivery__r.CONTAINER_ID__r.MEASUREMENT_CBM__c) &amp;BR() &amp;
&quot;NET/GROSS WEIGHT(KG):&quot;&amp; text(Delivery__r.CONTAINER_ID__r.NET_WEIGHT__c) &amp;&quot;/&quot;&amp; 
text(Delivery__r.CONTAINER_ID__r.GROSS_WEIGHT__c) &amp;BR() &amp;
&quot;PACKAGES:&quot;&amp; text(Delivery__r.CONTAINER_ID__r.QUANTITY_PACKAGES__c) &amp;BR() &amp;
&quot;CONTAINER/SEAL NUMBER:&quot;&amp;  Delivery__r.CONTAINER_ID__r.Container_NO__c &amp;&quot;/&quot;&amp; Delivery__r.CONTAINER_ID__r.Seal_No__c</formula>
    <label>CONTAINER DETAIL</label>
    <type>Text</type>
</CustomField>