force-app/main/default/objects/LoadingLocation__c/fields/CustomerDetail__c.field-meta.xml
<CustomField>
    <fullName>CustomerDetail__c</fullName>
    <formula>&quot;CUSTOMER NAME(LOCAL):&quot;&amp;Delivery__r.HBL_SHIPMENT__r.Field1__r.Name  &amp;BR()&amp;
&quot;CUSTOMER NAME(ENG):&quot;&amp;Delivery__r.HBL_SHIPMENT__r.Field1__r.EnglishCompanyName__c</formula>
    <label>CUSTOMER DETAIL</label>
    <type>Text</type>
</CustomField>