force-app/main/default/objects/LoadingLocation__c/fields/DeliveryRequestDetail__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRequestDetail__c</fullName>
    <formula>&quot;PICKUP FROM:&quot;&amp;Delivery__r.Receiver__c &amp; BR() &amp;
&quot;PICKUP ADDRESS:&quot;&amp; Delivery__r.AddressForAccept__c &amp; BR() &amp;
&quot;PICKUP DATE:&quot;&amp;text(Delivery__r.Pickupdate__c) &amp;  BR() &amp;
&quot;DELIVERY DESTINATION:&quot;&amp;Delivery__r.Destination__c &amp;  BR() &amp;
&quot;DELIVERY DESTINATION ADDRESS:&quot;&amp;Delivery__r.Destinationaddress__c &amp;  BR() &amp;
&quot;DELIVERY DATE:&quot;&amp;text(Delivery__r.DeliveryDate__c)</formula>
    <label>DELIVERY REQUEST DETAIL</label>
    <type>Text</type>
</CustomField>