force-app/main/default/objects/LoadingLocation__c/fields/DestinationAddress__c.field-meta.xml
<CustomField>
    <fullName>DestinationAddress__c</fullName>
    <label>TARGET ADDRESS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>