force-app/main/default/objects/LoadingLocation__c/fields/EndTimeDelay__c.field-meta.xml
<CustomField>
    <fullName>EndTimeDelay__c</fullName>
    <formula>( ActualArrivalTime__c -  ArrivalTime__c )*24</formula>
    <label>END TIME DELAY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>