force-app/main/default/objects/LoadingLocation__c/fields/EstimatedFuelConsumption__c.field-meta.xml
<CustomField>
    <fullName>EstimatedFuelConsumption__c</fullName>
    <formula>DistanceKM__c / Route__r.Truck__r.EstimatedKMPerLitre__c</formula>
    <label>ESTIMATED FUEL COSUMPTION(LITER)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>