force-app/main/default/objects/LoadingLocation__c/fields/HandlingType__c.field-meta.xml
<CustomField>
    <fullName>HandlingType__c</fullName>
    <label>HANDLING TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Load</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>Unload</fullName>
            </value>
            <value>
                <fullName>Partially Load</fullName>
            </value>
            <value>
                <fullName>Partially Unload</fullName>
            </value>
            <value>
                <fullName>Return To Truck Carage</fullName>
                <label>Return To Truck Garage</label>
            </value>
            <value>
                <fullName>From Truck Garage to ICD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>