force-app/main/default/objects/LoadingLocation__c/fields/LoadingUnloadingStatus__c.field-meta.xml
<CustomField>
    <fullName>LoadingUnloadingStatus__c</fullName>
    <label>LOADING &amp; UNLOADING STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>On Arrangement</fullName>
            </value>
            <value>
                <fullName>CompletedInSchedule</fullName>
                <label>Completed in Schedule</label>
            </value>
            <value>
                <fullName>Completed In Delay</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>