force-app/main/default/objects/LoadingLocation__c/fields/PortDetail__c.field-meta.xml
<CustomField>
    <fullName>PortDetail__c</fullName>
    <formula>Port__r.Fullname__c</formula>
    <label>Port Detail</label>
    <type>Text</type>
</CustomField>