force-app/main/default/objects/LoadingLocation__c/fields/RemainingMeasurement__c.field-meta.xml
<CustomField>
    <fullName>RemainingMeasurement__c</fullName>
    <label>REMAIN MEASUREMENT(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>