force-app/main/default/objects/LoadingLocation__c/fields/RemainingWeight__c.field-meta.xml
<CustomField>
    <fullName>RemainingWeight__c</fullName>
    <label>REMAINING WEIGHT(KG)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>