force-app/main/default/objects/LoadingLocation__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>ROUTE ID</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipName>LoadingLocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>