force-app/main/default/objects/LoadingLocation__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <label>SEQUENCE NUMBER</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>