force-app/main/default/objects/LoadingLocation__c/fields/StartingTime__c.field-meta.xml
<CustomField>
    <fullName>StartingTime__c</fullName>
    <label>ESTIMATED START TIME</label>
    <type>DateTime</type>
</CustomField>