force-app/main/default/objects/LoadingLocation__c/fields/TriggerHandlerUpdate__c.field-meta.xml
<CustomField>
    <fullName>TriggerHandlerUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only used from Trigger Handler to control linked record udpate</description>
    <inlineHelpText>Only used from Trigger Handler to control linked record udpate</inlineHelpText>
    <label>Trigger Handler Update</label>
    <type>Checkbox</type>
</CustomField>