force-app/main/default/objects/LoadingLocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LoadingUnloadingStatus__c</columns>
    <columns>SequenceNumber__c</columns>
    <columns>Route__c</columns>
    <columns>Delivery__c</columns>
    <columns>StartingTime__c</columns>
    <columns>ActualStartTime__c</columns>
    <columns>ArrivalTime__c</columns>
    <columns>ActualArrivalTime__c</columns>
    <columns>HandlingType__c</columns>
    <columns>CargoMeasurement__c</columns>
    <columns>CargoWeight__c</columns>
    <columns>StartingAddress__c</columns>
    <columns>DestinationAddress__c</columns>
    <columns>DistanceKM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>