force-app/main/default/objects/LoadingLocation__c/listViews/Container_Load_Unload_in_Plan.listView-meta.xml
<ListView>
    <fullName>Container_Load_Unload_in_Plan</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Route__c</columns>
    <columns>HandlingType__c</columns>
    <columns>Port__c</columns>
    <columns>PortDetail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LoadingLocation__c.Container</value>
    </filters>
    <filters>
        <field>LoadingUnloadingStatus__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <filters>
        <field>HandlingType__c</field>
        <operation>equals</operation>
        <value>Load,Unload</value>
    </filters>
    <label>Container Load / Unload in Plan</label>
</ListView>