force-app/main/default/objects/LoadingLocation__c/listViews/ShipmentLoadInPlan.listView-meta.xml
<ListView>
    <fullName>ShipmentLoadInPlan</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Route__c</columns>
    <columns>HandlingType__c</columns>
    <columns>Port__c</columns>
    <columns>PortDetail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>LoadingLocation__c.Shipment</value>
    </filters>
    <filters>
        <field>LoadingUnloadingStatus__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <filters>
        <field>HandlingType__c</field>
        <operation>equals</operation>
        <value>Load</value>
    </filters>
    <label>Shipment Load in Plan</label>
</ListView>