force-app/main/default/objects/LoadingLocation__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Route__c</columns>
    <columns>clofor_com_cfs__TargetAddressGeolocation__Latitude__s</columns>
    <columns>clofor_com_cfs__TargetAddressGeolocation__Longitude__s</columns>
    <columns>clofor_com_cfs__StartAddressGeolocation__Latitude__s</columns>
    <columns>clofor_com_cfs__StartAddressGeolocation__Longitude__s</columns>
    <filterScope>Mine</filterScope>
    <label>Today</label>
</ListView>